// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - BragButton render button if onClick handler is provided 1`] = `
.c0 {
  position: relative;
  background: #21c230;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.8rem 0 0.8rem 0.8rem;
  margin: 1.6rem 0;
  border: 0;
  border-bottom: 0.3rem solid #138a1e;
  border-radius: 0.4rem;
  font-size: 1.8rem;
  font-weight: 700;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  height: 4rem;
}

.c0:not(:disabled) {
  cursor: pointer;
}

<button
  className="c0"
  onClick={[MockFunction]}
/>
`;

exports[`COMPONENT - BragButton renders Link if to prop is provided 1`] = `
.c0 {
  position: relative;
  background: #21c230;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.8rem 0 0.8rem 0.8rem;
  margin: 1.6rem 0;
  border: 0;
  border-bottom: 0.3rem solid #138a1e;
  border-radius: 0.4rem;
  font-size: 1.8rem;
  font-weight: 700;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  height: 4rem;
}

.c0:not(:disabled) {
  cursor: pointer;
}

<Link
  className="c0"
  to="/frontend"
/>
`;

exports[`COMPONENT - BragButton renders correctly 1`] = `
.c0 {
  position: relative;
  background: #21c230;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.8rem 0;
  margin: 1.6rem 0;
  border: 0;
  border-bottom: 0.3rem solid #138a1e;
  border-radius: 0.4rem;
  font-size: 1.8rem;
  font-weight: 700;
  text-align: left;
  width: 100%;
  height: 4rem;
}

.c0:not(:disabled) {
  cursor: pointer;
}

<button
  className="c0"
>
  Confess
</button>
`;
